# COP3530_Project2

./: .gitignore  CMakeLists.txt  readme.md
src/: BSTree.h  Movie.h  Parser.cpp  Parser.h  RBTree.cpp  RBTree.h  SplayTree.cpp  SplayTree.h  TreeNode.cpp  TreeNode.h  WindowManager.cpp  WindowManager.h  first120k.csv  main.cpp  movies.csv
src/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
test/: test.cpp
